portfolio_stephanos/src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
    --green: #008080;
  }
}


body {
  font-family: 'Arial', sans-serif;
  background-color: #000000;
  color: #ffff;
}

.button-hover {
  transition: background-color 0.2s ease, transform 0.2s ease;
}

.button-hover:hover {
  background-color: var(--green);
  transform: rotate(-5deg) scale(1.05); /* Tilt and zoom */
}

.line{
  position: relative;
  margin-top: 1.5rem;
  width: 8rem; 
  background-color: #008080;
  border: 1px solid #008080;
}

.line .circle {
  position: absolute;
  left: -0.25rem; 
  top: 50%;
  transform: translateY(-50%);
  width: 0.5rem; 
  height: 0.5rem; 
  border-radius: 9999px; 
  background-color: #008080;
  border: 1px solid #008080;
}
/* Home Page */
.content-animate {
  transition: transform 2s ease-in-out, opacity 0.3s ease-in-out;
  will-change: transform, opacity;
}

.content-exit-active {
  transform: translateX(100%);
  opacity: 0;
}

.homeContentSection {
  width: 100%;
  display: flex;
  flex-direction: row;
  margin-top: 20px;
}

@keyframes typing {
  from {
    width: 0;
  }

  to {
    width: 100%;
  }
}

.NameTitle h1:first-child {
  overflow: hidden;
  white-space: nowrap;
  animation: typing 1.75s steps(100, end) 0.75s 1 normal both;
}

.NameTitle h1:last-child {
  overflow: hidden;
  white-space: nowrap;
  animation: typing 1.75s steps(100, end) 1.75s 1 normal both;
}

.NameTitle {
  margin-top: 8rem;
  display: flex;
  flex-direction: column;
  overflow: hidden;
  white-space: nowrap;
}

@keyframes fadeInUp {
  from {
    opacity: 0;
    transform: translateY(50px);
  }

  to {
    opacity: 1;
    transform: translateY(0);
  }
}

.fadeInUp {
  opacity: 0;
  animation: fadeInUp 1s ease-out forwards;
}

.h2FadeInUp {
  animation-delay: 3s;
}

.h3FadeInUp {
  animation-delay: 3.5s;
}





/* Technologies */
.tech-section-container {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.tech-section {
  display: flex;
  align-items: center;  
  flex-direction: column;
  gap: 10px;
  padding: 10px;
  border: 2px solid white;
}

.logo-list {
  display: flex;
  flex-wrap: wrap; /* Allow logos to wrap */
  gap: 4rem;
  justify-content: center; /* Center logos */
  padding-bottom: 0.75rem;
}

@media (max-width: 768px) {
  .logo-list {
    gap: 2rem; /* Reduce gap on smaller screens */
  }
}

@media (max-width: 480px) {
  .logo-list {
    gap: 1rem; /* Even smaller gap on very small screens */
  }
}

.TechIcon {
  width: 3.5rem;
  height: 3.5rem;
  transition: filter 0.3s ease, transform 0.3s ease;
  /* filter: grayscale(100%); */
}

.TechIcon:hover {
  filter: none;
  transform: scale(1.2); /* Pop effect on hover */
}

/* resume */
.mini-techIcon {
  width: 2.5rem;
  height: 2.5rem;
  filter: grayscale(100%);
  transition: filter 0.3s ease, transform 0.3s ease;
}

.mini-techIcon:hover {
  transform: scale(1.2); /* Pop effect on hover */
}


.job-entry {
  transition: transform 0.3s ease;
}


.JobEntryContainer:hover .job-entry{
  background-color: rgba(0, 0, 0, 0.1); /* Apply gray modal overlay to all elements */
  color: #666;
  
}

.JobEntryContainer {
  /* Hide scrollbar for Webkit browsers */
  &::-webkit-scrollbar {
    display: none;
  }

  /* Hide scrollbar for IE, Edge, and Firefox */
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}

.JobEntryContainer .job-entry:hover{
  background-color:  #1a1d26;
  color: white;
  transform: scale(1.01);
}

/* Ensures all job-entry elements have a consistent grayish look on hover of the container, excluding the one being directly hovered */
.JobEntryContainer:hover .job-entry img {
  filter: grayscale(100%); /* Converts the image to grayscale */
  opacity: 0.5; /* Makes the image semi-transparent to mimic the gray overlay effect */
}

/* When a specific job-entry is hovered, it returns the images to full color and opacity */
.JobEntryContainer .job-entry:hover img {
  filter: none; /* Removes any filters, showing the image in original color */
  opacity: 1; /* Full opacity for clear visibility */
}

